Fixed CSS text-align and and capital M

--- a/client/sass/layout/layout.scss
+++ b/client/sass/layout/layout.scss
@@ -27,8 +27,8 @@
         }
 
         .logo{
-          align: Left;
-          Margin: 0.5em;
+          text-align: Left;
+          margin: 0.5em;
         }
       }
     }
